form show and hide

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
         </ul>
         <div class="create__circle"></div>
 
-        <!-- One step  -->
+        <!-- One step section with shadow   -->
         <div class="create__transition">
           <div class="create__transition-title">
             От решения задачи Вас отделяет всего один шаг…
@@ -494,6 +494,8 @@
             <span class="create__transition-button-text">Сделать шаг</span>
           </button>
         </div>
+
+
 
         <div class="form">
           <form class="form__body" method="post" action="mail.php">
@@ -541,9 +543,10 @@
           </form>
 
           <div class="center">
-            <a class="form__mobile" href="tel:89272003852">
-              <svg class="form__mobile-icon" width="30" height="30">
-                <use href="/assets/icons/sprite.svg#telephone"></use></svg><span class="form__mobile-text">Позвонить +7(927) 200-38-52</span></a>
+            <a class="form__mobile" href="tel:+79272003852">
+              <!-- <svg class="form__mobile-icon" width="30" height="30">
+                <use href="/assets/icons/sprite.svg#telephone"></use></svg> -->
+                <span  class="form__mobile-text">Позвонить +7 (927) 200-38-52</span></a>
           </div>
         </div>
       </div>
