--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://unpkg.com/three@0.154.0/build/three.module.js",
+          "three/addons/": "https://unpkg.com/three@0.154.0/examples/jsm/"
+        }
+      }
+    </script>
+
   </head>
   <body>
     <div class="loader"></div>
@@ -43,6 +54,8 @@
         </article>
 
         <div class="welcome__canvas-container"></div>
+
+
       </div>
     </section>
 
@@ -582,10 +595,17 @@
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
+
+    <script
+    type="module"
+    src="/scripts/sections/dot_figure.js"
+  ></script>
+
+
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script type="module" src="/scripts/main_new.js"></script>
     <script type="module" src="/scripts/ext/inputmask.min.js"></script>
-
+		
     <!-- <script src="/scripts/main.js"></script> -->
 
     <!-- Yandex.Metrika counter -->
