--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&family=Roboto&display=swap"
       rel="stylesheet"
     />
+
     <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
     <link
     rel="stylesheet"
@@ -58,7 +59,13 @@
           специализирующаяся на разработке ПО, решающего проблему
         </article>
 
-        <div class="welcome__canvas-container"></div>
+        <div class="welcome__canvas-container">
+          <video id="video" loop muted crossOrigin="anonymous" playsinline style="display:none">
+            <source src="./assets/textures/kinect.webm">
+            <source src="./assets/textures/kinect.mp4">
+          </video>
+      
+        </div>
 
 
       </div>
