--- a/index.html
+++ b/index.html
@@ -358,6 +358,11 @@
             target="_blank"
             ><img class="clients__list-img" src="/assets/images/client6.png"
           /></a>
+          <div
+            class="clients__list-client"
+            target="_blank"
+            ><img class="clients__list-img" src="/assets/images/client7.png"
+          /></div>
         </div>
       </div>
     </section>
