--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link type="image/x-icon" rel="icon" href="/assets/images/favicon.svg" />
     <link type="image/x-icon" rel="icon" href="/assets/images/favicon.png" />
-    <link rel="stylesheet" type="text/css" href="/styles/new.css" />
+    <link rel="stylesheet" type="text/css" href="/styles/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,14 +24,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 
-    <script type="importmap">
-      {
-        "imports": {
-          "three": "https://unpkg.com/three@0.154.0/build/three.module.js",
-          "three/addons/": "https://unpkg.com/three@0.154.0/examples/jsm/"
-        }
-      }
-    </script>
   </head>
   <body>
     <div class="loader"></div>
@@ -601,25 +593,26 @@
         <use href="/assets/icons/sprite.svg#arrow"></use>
       </svg>
     </button>
-
-    <script type="module" src="/scripts/sections/section_welcome.js"></script>
-    <script type="module" src="/scripts/sections/section_our_steps.js"></script>
+<!-- 
+    <script type="module" src="/src/section_welcome.js"></script>
+    <script type="module" src="/src/section_our_steps.js"></script>
     <script
       type="module"
-      src="/scripts/sections/section_create_form.js"
+      src="/src/section_create_form.js"
     ></script>
     <script
       type="module"
-      src="/scripts/sections/section_our_projects.js"
+      src="/src/section_our_projects.js"
     ></script>
 
-    <script type="module" src="/scripts/sections/dot_figure.js"></script>
+    <script type="module" src="/src/dot_figure.js"></script>
 
-    <script type="module" src="/scripts/main_new.js"></script>
-    <script type="module" src="/scripts/ext/inputmask.min.js"></script>
+    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/inputmask.min.js"></script> -->
+    <script src="dist/bundle.js"></script>
 
     <!-- Yandex.Metrika counter -->
-    <!-- <script type="text/javascript" >
+    <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
    m[i].l=1*new Date();
    for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
@@ -632,8 +625,8 @@
         accurateTrackBounce:true,
         webvisor:true
    });
-</script> -->
-    <!-- <noscript><div><img src="https://mc.yandex.ru/watch/90840356" style="position:absolute; left:-9999px;" alt="" /></div></noscript> -->
+</script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/90840356" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
   </body>
 </html>
