--- a/index.html
+++ b/index.html
@@ -593,8 +593,8 @@
         <use href="/assets/icons/sprite.svg#arrow"></use>
       </svg>
     </button>
-<!-- 
-    <script type="module" src="/src/section_welcome.js"></script>
+ 
+    <!-- <script type="module" src="/src/section_welcome.js"></script>
     <script type="module" src="/src/section_our_steps.js"></script>
     <script
       type="module"
@@ -608,7 +608,7 @@
     <script type="module" src="/src/dot_figure.js"></script>
 
     <script type="module" src="/src/main.js"></script>
-    <script type="module" src="/src/inputmask.min.js"></script> -->
+    <script type="module" src="/src/inputmask.min.js"></script>  -->
     <script src="dist/bundle.js"></script>
 
     <!-- Yandex.Metrika counter -->
