--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
       <div class="welcome__canvas-container">
         <div class="welcome__video-container"></div>
-        <video
+        <!-- <video
           id="video"
           loop
           muted
@@ -66,7 +66,7 @@
         >
           <source src="./assets/textures/kinect.webm" />
           <source src="./assets/textures/kinect.mp4" />
-        </video>
+        </video> -->
       </div>
     </section>
 
