--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Index</title>
+  <title>Tests</title>
 </head>
 <body>
-  <h1>Index</h1>
+  <h1>Tests</h1>
   
   <ul>
     <li><a href="build_40_43/index.html">build_40_43</a></li>
     <li><a href="build_40_43.zip">build_40_43.zip</a></li>
+
+    <li><a href="build_75_78/index.html">build_75_78</a></li>
+    <li><a href="build_75_78.zip">build_75_78.zip</a></li>
+
+
+    <li><a href="build_79_82/index.html">build_79_82</a></li>
+    <li><a href="build_79_82.zip">build_79_82.zip</a></li>
+
+    
+    <li><a href="build_83_86/index.html">build_83_86</a></li>
+    <li><a href="build_83_86.zip">build_83_86.zip</a></li>
+    
+    <li><a href="build_132_135/index.html">build_132_135</a></li>
+    <li><a href="build_132_135.zip">build_132_135.zip</a></li>
+
 
   </ul>
 </body>
