--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
     <li><a href="build_132_135/index.html">build_132_135</a></li>
     <li><a href="build_132_135.zip">build_132_135.zip</a></li>
 
+    <li><a href="build_player_digital/index.html">build_player_digital</a></li>
+    <li><a href="build_player_digital.zip">build_player_digital.zip</a></li>
+
+    <a></a>
+    
+    <li><a href="build_player_oper/index.html">build_player_oper</a></li>
+    <li><a href="build_player_oper.zip">build_player_oper.zip</a></li>
+
 
   </ul>
 </body>
