--- a/build_40_43/index.html
+++ b/build_40_43/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>dnd_task</title>
+    <title>dnd_task_40_43</title>
     <meta charset="utf-8" />
     <style>
         * {
