new player added

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
     <li><a href="build_player_oper/index.html">build_player_oper</a></li>
     <li><a href="build_player_oper.zip">build_player_oper.zip</a></li>
 
+    <li>___________</li>
+    
+    <li><a href="build_player_atom/index.html">build_player_atom</a></li>
+    <li><a href="build_player_atom.zip">build_player_atom.zip</a></li>
 
   </ul>
 </body>
