--- a/build_player_atom/index.html
+++ b/build_player_atom/index.html
@@ -1,1 +1,19 @@
-<!doctype html><html lang="en"><head><title>/Users/kot/Desktop/work/oot/base tasks/player_task</title><meta charset="utf-8"/><style>* {padding: 0; margin: 0;}</style><script src="variables.js"></script><script defer="defer" src="./libs/bundle.js"></script></head><body></body></html>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <title>player_task_atom</title>
+    <meta charset="utf-8" />
+    <style>
+        * {
+            padding: 0;
+            margin: 0;
+        }
+    </style>
+    <script src="variables.js"></script>
+    <script defer="defer" src="./libs/bundle.js"></script>
+</head>
+
+<body></body>
+
+</html>
