--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
     <li><a href="build_player_atom/index.html">build_player_atom</a></li>
     <li><a href="build_player_atom.zip">build_player_atom.zip</a></li>
 
+    <li>___________</li>
+    <li><a href="vega/index.html">vega proect</a></li>
   </ul>
 </body>
 </html>
