--- a/tests/index.html
+++ b/tests/index.html
@@ -7,9 +7,14 @@
   <h1>Tests</h1>
   
   <ul>
-    <li><a href="new_player/index.html">new_player Управление ключевыми показателями производственных подразделений</a></li>
+    <li><a href="new_player/index.html">new_player </a></li>
     <li><a href="new_player.zip">new_player.zip</a></li>
 
+    <li><a href="scroll_40/index.html">scroll_40 </a></li>
+    <li><a href="scroll_40.zip">scroll_40.zip</a></li>
+    
+    <li><a href="scroll_54/index.html">scroll_54 </a></li>
+    <li><a href="scroll_54.zip">scroll_54.zip</a></li>
     
     <li>___________</li>
 
