--- a/tests/index.html
+++ b/tests/index.html
@@ -16,6 +16,8 @@
     <li><a href="scroll_54/index.html">scroll_54 </a></li>
     <li><a href="scroll_54.zip">scroll_54.zip</a></li>
     
+    <li><a href="scroll_46/index.html">scroll_46 </a></li>
+    <li><a href="scroll_46.zip">scroll_46.zip</a></li>
     <li>___________</li>
 
 
