--- a/tests/index.html
+++ b/tests/index.html
@@ -45,8 +45,8 @@
     <li><a href="90-92/index.html">90-92 </a></li>
     <li><a href="90-92.zip">90-92.zip</a></li>
 
-    <!-- <li><a href="dnd_29/index.html">dnd_29 </a></li>
-    <li><a href="dnd_29.zip">dnd_29.zip</a></li> -->
+    <li><a href="116-118/index.html">116-118 </a></li>
+    <li><a href="116-118.zip">116-118.zip</a></li>
 
     <li><a href="130-132/index.html">130-132 </a></li>
     <li><a href="130-132.zip">130-132.zip</a></li>
