atom fire added

--- a/tests/index.html
+++ b/tests/index.html
@@ -52,6 +52,10 @@
     <li><a href="130-132.zip">130-132.zip</a></li>
     <li>___________</li>
 
+    <li><a href="atom_fire/index.html">atom_fire </a></li>
+    <li><a href="atom_fire.zip">atom_fire.zip</a></li>
+    <li>___________</li>
+
 
   </ul>
 </body>
