--- a/tests/index.html
+++ b/tests/index.html
@@ -56,6 +56,15 @@
     <li><a href="atom_fire.zip">atom_fire.zip</a></li>
     <li>___________</li>
 
+    <li><a href="double_lvl/index.html">double_lvl </a></li>
+    <li><a href="double_lvl.zip">double_lvl.zip</a></li>
+
+    <li><a href="atom_fire/index.html">atom_fire </a></li>
+    <li><a href="atom_fire.zip">atom_fire.zip</a></li>
+
+    
+    <li>___________</li>
+
 
   </ul>
 </body>
