--- a/tests/index.html
+++ b/tests/index.html
@@ -45,15 +45,11 @@
 
     <li><a href="atom_fire/index.html">atom_fire </a></li>
     <li><a href="atom_fire.zip">atom_fire.zip</a></li>
+
     <li>___________</li>
 
-    <li><a href="double_lvl/index.html">double_lvl </a></li>
-    <li><a href="double_lvl.zip">double_lvl.zip</a></li>
+    <li><a href="antonova/index.html">antonova </a></li>
 
-    <li><a href="atom_fire/index.html">atom_fire </a></li>
-    <li><a href="atom_fire.zip">atom_fire.zip</a></li>
-
-    
     <li>___________</li>
 
 
