--- a/tests/antonova/index.html
+++ b/tests/antonova/index.html
@@ -11,8 +11,8 @@
     <li><a href="double_lvl/index.html">double_lvl </a></li>
     <li><a href="double_lvl.zip">double_lvl.zip</a></li>
 
-    <li><a href="atom_fire/index.html">atom_fire </a></li>
-    <li><a href="atom_fire.zip">atom_fire.zip</a></li>
+    <li><a href="dnd_24/index.html">dnd_24</a></li>
+    <li><a href="dnd_24.zip">dnd_24.zip</a></li>
 
 
 
