--- a/tests/antonova/index.html
+++ b/tests/antonova/index.html
@@ -14,8 +14,18 @@
     <li><a href="dnd_24/index.html">dnd_24</a></li>
     <li><a href="dnd_24.zip">dnd_24.zip</a></li>
 
+    <li>__________________</li>
 
+    <li><a href="gpn_2_oper_dnd_15/index.html">gpn_2_oper_dnd_15</a></li>
+    <li><a href="gpn_2_oper_dnd_15.zip">gpn_2_oper_dnd_15.zip</a></li>
 
+    <li><a href="gpn_2_oper_dnd_29/index.html">gpn_2_oper_dnd_29</a></li>
+    <li><a href="gpn_2_oper_dnd_29.zip">gpn_2_oper_dnd_29.zip</a></li>
+
+    <li><a href="gpn_2_oper_dnd_40/index.html">gpn_2_oper_dnd_40</a></li>
+    <li><a href="gpn_2_oper_dnd_40.zip">gpn_2_oper_dnd_40.zip</a></li>
+
+    
   </ul>
 </body>
 </html>
