--- a/tests/index.html
+++ b/tests/index.html
@@ -7,21 +7,11 @@
   <h1>Tests</h1>
   
   <ul>
-    <li><a href="new_player/index.html">new_player </a></li>
-    <li><a href="new_player.zip">new_player.zip</a></li>
-
-    <li><a href="scroll_40/index.html">scroll_40 </a></li>
-    <li><a href="scroll_40.zip">scroll_40.zip</a></li>
-    
-    <li><a href="scroll_54/index.html">scroll_54 </a></li>
-    <li><a href="scroll_54.zip">scroll_54.zip</a></li>
-    
-    <li><a href="scroll_46/index.html">scroll_46 </a></li>
-    <li><a href="scroll_46.zip">scroll_46.zip</a></li>
-
+    <li><a href="ufimtseva/index.html">ufimtseva </a></li>
+  
     <li>___________</li>
 
-
+<!-- 
     <li><a href="dnd_6/index.html">dnd_6 </a></li>
     <li><a href="dnd_6.zip">dnd_6.zip</a></li>
 
@@ -51,7 +41,7 @@
     <li><a href="antonova/index.html">antonova </a></li>
 
     <li>___________</li>
-
+ -->
 
   </ul>
 </body>
