--- a/tests/kapralova/index.html
+++ b/tests/kapralova/index.html
@@ -9,7 +9,10 @@
   <ul>
 
     <li><a href="ts_slide_12/index.html">ts_slide_12 </a></li>
-    <li><a href="ts_slide_12.zip">ts_slide_12.zip</a></li>    
+    <li><a href="ts_slide_12.zip">ts_slide_12.zip</a></li> 
+    
+    <li><a href="ts_slide_55/index.html">ts_slide_55 </a></li>
+    <li><a href="ts_slide_55.zip">ts_slide_55.zip</a></li> 
   </ul>
 </body>
 </html>
