--- a/tests/kapralova/index.html
+++ b/tests/kapralova/index.html
@@ -13,6 +13,9 @@
     
     <li><a href="ts_slide_55/index.html">ts_slide_55 </a></li>
     <li><a href="ts_slide_55.zip">ts_slide_55.zip</a></li> 
+
+    <li><a href="gpn_oius_3_knot_25-26/index.html">gpn_oius_3_knot_25-26 </a></li>
+    <li><a href="gpn_oius_3_knot_25-26.zip">gpn_oius_3_knot_25-26.zip</a></li>
   </ul>
 </body>
 </html>
