--- a/tests/kapralova/index.html
+++ b/tests/kapralova/index.html
@@ -16,6 +16,12 @@
 
     <li><a href="gpn_oius_3_knot_25-26/index.html">gpn_oius_3_knot_25-26 </a></li>
     <li><a href="gpn_oius_3_knot_25-26.zip">gpn_oius_3_knot_25-26.zip</a></li>
+
+    <li><a href="gpn_oius_3_knot_69/index.html">gpn_oius_3_knot_69 </a></li>
+    <li><a href="gpn_oius_3_knot_69.zip">gpn_oius_3_knot_69.zip</a></li>
+
+    <li><a href="gpn_oius_4_knot_34/index.html">gpn_oius_4_knot_34 </a></li>
+    <li><a href="gpn_oius_4_knot_34.zip">gpn_oius_4_knot_34.zip</a></li>
   </ul>
 </body>
 </html>
