--- a/tests/kapralova/index.html
+++ b/tests/kapralova/index.html
@@ -22,6 +22,9 @@
 
     <li><a href="gpn_oius_4_knot_34/index.html">gpn_oius_4_knot_34 </a></li>
     <li><a href="gpn_oius_4_knot_34.zip">gpn_oius_4_knot_34.zip</a></li>
+
+    <li><a href="gpn_oius_3_knot_108/index.html">gpn_oius_3_knot_108 </a></li>
+    <li><a href="gpn_oius_3_knot_108.zip">gpn_oius_3_knot_108.zip</a></li>
   </ul>
 </body>
 </html>
