new player added

--- a/tests/kapralova/index.html
+++ b/tests/kapralova/index.html
@@ -8,23 +8,10 @@
   
   <ul>
 
-    <li><a href="ts_slide_12/index.html">ts_slide_12 </a></li>
-    <li><a href="ts_slide_12.zip">ts_slide_12.zip</a></li> 
+    <li><a href="gpn_opti_player/index.html">gpn_opti_player </a></li>
+    <li><a href="gpn_opti_player.zip">gpn_opti_player.zip</a></li> 
     
-    <li><a href="ts_slide_55/index.html">ts_slide_55 </a></li>
-    <li><a href="ts_slide_55.zip">ts_slide_55.zip</a></li> 
-
-    <li><a href="gpn_oius_3_knot_25-26/index.html">gpn_oius_3_knot_25-26 </a></li>
-    <li><a href="gpn_oius_3_knot_25-26.zip">gpn_oius_3_knot_25-26.zip</a></li>
-
-    <li><a href="gpn_oius_3_knot_69/index.html">gpn_oius_3_knot_69 </a></li>
-    <li><a href="gpn_oius_3_knot_69.zip">gpn_oius_3_knot_69.zip</a></li>
-
-    <li><a href="gpn_oius_4_knot_34/index.html">gpn_oius_4_knot_34 </a></li>
-    <li><a href="gpn_oius_4_knot_34.zip">gpn_oius_4_knot_34.zip</a></li>
-
-    <li><a href="gpn_oius_3_knot_108/index.html">gpn_oius_3_knot_108 </a></li>
-    <li><a href="gpn_oius_3_knot_108.zip">gpn_oius_3_knot_108.zip</a></li>
+  
   </ul>
 </body>
 </html>
