--- a/tests/kapralova/gpn_opti_player/index.html
+++ b/tests/kapralova/gpn_opti_player/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>player</title>
+    <title>player_task</title>
     <meta charset="utf-8" />
     <style>
         * {
