--- a/tests/kapralova/index.html
+++ b/tests/kapralova/index.html
@@ -8,8 +8,8 @@
   
   <ul>
 
-    <li><a href="gpn_opti_player/index.html">gpn_opti_player </a></li>
-    <li><a href="gpn_opti_player.zip">gpn_opti_player.zip</a></li> 
+    <li><a href="dnd_18/index.html">dnd_18 </a></li>
+    <li><a href="dnd_18.zip">dnd_18.zip</a></li> 
     
   
   </ul>
