--- a/tests/kapralova/index.html
+++ b/tests/kapralova/index.html
@@ -12,6 +12,8 @@
     <li><a href="dnd_18.zip">dnd_18.zip</a></li> 
     
   
+    <li><a href="dnd_25/index.html">dnd_25 </a></li>
+    <li><a href="dnd_25.zip">dnd_25.zip</a></li> 
   </ul>
 </body>
 </html>
