11 added to list

--- a/tests/kapralova/index.html
+++ b/tests/kapralova/index.html
@@ -14,6 +14,11 @@
   
     <li><a href="dnd_25/index.html">dnd_25 </a></li>
     <li><a href="dnd_25.zip">dnd_25.zip</a></li> 
+
+   <li><a href="dnd_11/index.html">dnd_11 </a></li>
+    <li><a href="dnd_11.zip">dnd_11.zip</a></li> 
+
+
   </ul>
 </body>
 </html>
