--- a/tests/kapralova/index.html
+++ b/tests/kapralova/index.html
@@ -19,6 +19,14 @@
     <li><a href="dnd_11.zip">dnd_11.zip</a></li> 
 
 
+   <li><a href="dnd_132/index.html">dnd_132 </a></li>
+    <li><a href="dnd_132.zip">dnd_132.zip</a></li> 
+
+
+   <li><a href="dnd_154/index.html">dnd_154 </a></li>
+    <li><a href="dnd_154.zip">dnd_154.zip</a></li> 
+
+
   </ul>
 </body>
 </html>
