--- a/tests/kapralova/index.html
+++ b/tests/kapralova/index.html
@@ -26,6 +26,11 @@
    <li><a href="dnd_154/index.html">dnd_154 </a></li>
     <li><a href="dnd_154.zip">dnd_154.zip</a></li> 
 
+   <li><a href="dnd_3r_12/index.html">dnd_3r_12 </a></li>
+    <li><a href="dnd_3r_12.zip">dnd_3r_12.zip</a></li> 
+
+    <li><a href="dnd_3r_17/index.html">dnd_3r_17 </a></li>
+    <li><a href="dnd_3r_17.zip">dnd_3r_17.zip</a></li> 
 
   </ul>
 </body>
