new player added

--- a/tests/index.html
+++ b/tests/index.html
@@ -17,6 +17,11 @@
 
     <li>___________</li>
 
+    
+    <li><a href="YulyaKry/index.html">YulyaKry </a></li>
+
+    <li>___________</li>
+
   </ul>
 </body>
 
