--- a/index.html
+++ b/index.html
@@ -1,15 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Placeholder Image</title>
+    <title>Дни без вопроса</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 50px;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+        .counter {
+            font-size: 48px;
+            font-weight: bold;
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Waiting</h1>
-    
-    <!-- Image with a placeholder -->
     <img src="assets/images/waiting.jpeg" alt="Placeholder Image" >
+    <h1>Дни без вопроса "А что в ответах от бека?"</h1>
+    <div class="counter" id="daysCounter">1</div>
+    <button onclick="resetCounter()">Сбросить</button>
 
+    <script>
+        function getDaysSinceReset() {
+            const resetDate = localStorage.getItem("resetDate");
+            if (!resetDate) {
+                localStorage.setItem("resetDate", new Date().toISOString().split("T")[0]);
+                return 0;
+            }
+            const resetTime = new Date(resetDate).getTime();
+            const todayTime = new Date().getTime();
+            return Math.floor((todayTime - resetTime) / (1000 * 60 * 60 * 24));
+        }
+
+        function resetCounter() {
+            localStorage.setItem("resetDate", new Date().toISOString().split("T")[0]);
+            document.getElementById("daysCounter").textContent = 0;
+        }
+
+        document.getElementById("daysCounter").textContent = getDaysSinceReset();
+    </script>
 </body>
 </html>
