--- a/tests/index.html
+++ b/tests/index.html
@@ -24,7 +24,7 @@
 
     
     
-    <li><a href="Lada/index.html">Lada </a></li>
+    <li><a href="lada/index.html">Lada </a></li>
 
     <li>___________</li>
 
