--- a/tests/lada/index.html
+++ b/tests/lada/index.html
@@ -11,17 +11,17 @@
     <li><a href="bank_player/index.html">bank_player </a></li>
     <li><a href="bank_player.zip">bank_player.zip</a></li>    
 
-    <li><a href="task_1_25_dnd/index.html">bank_player </a></li>
-    <li><a href="task_1_25_dnd.zip">bank_player.zip</a></li>    
+    <li><a href="task_1_25_dnd/index.html">task_1_25_dnd </a></li>
+    <li><a href="task_1_25_dnd.zip">task_1_25_dnd.zip</a></li>    
     
-    <li><a href="task_2_65_dnd/index.html">bank_player </a></li>
-    <li><a href="task_2_65_dnd.zip">bank_player.zip</a></li>    
+    <li><a href="task_2_65_dnd/index.html">task_2_65_dnd </a></li>
+    <li><a href="task_2_65_dnd.zip">task_2_65_dnd.zip</a></li>    
     
-    <li><a href="task_2_69_knot/index.html">bank_player </a></li>
-    <li><a href="task_2_69_knot.zip">bank_player.zip</a></li>    
+    <li><a href="task_2_69_knot/index.html">task_2_69_knot </a></li>
+    <li><a href="task_2_69_knot.zip">task_2_69_knot.zip</a></li>    
 
-    <li><a href="task_3_20_dnd/index.html">bank_player </a></li>
-    <li><a href="task_3_20_dnd.zip">bank_player.zip</a></li>    
+    <li><a href="task_3_20_dnd/index.html">task_3_20_dnd </a></li>
+    <li><a href="task_3_20_dnd.zip">task_3_20_dnd.zip</a></li>    
   </ul>
 </body>
 </html>
