--- a/tests/lada/index.html
+++ b/tests/lada/index.html
@@ -22,6 +22,12 @@
 
     <li><a href="task_3_20_dnd/index.html">task_3_20_dnd </a></li>
     <li><a href="task_3_20_dnd.zip">task_3_20_dnd.zip</a></li>    
+
+    <li>--------------------------------------- </a></li>
+
+    <li><a href="atom_3_69_knot/index.html">atom_3_69_knot </a></li>
+    <li><a href="atom_3_69_knot.zip">atom_3_69_knot.zip</a></li>    
+
   </ul>
 </body>
 </html>
