--- a/tests/lada/index.html
+++ b/tests/lada/index.html
@@ -28,6 +28,8 @@
     <li><a href="atom_3_69_knot/index.html">atom_3_69_knot </a></li>
     <li><a href="atom_3_69_knot.zip">atom_3_69_knot.zip</a></li>    
 
+    <li><a href="atom_3_110_dnd/index.html">atom_3_110_dnd </a></li>
+    <li><a href="atom_3_110_dnd.zip">atom_3_110_dnd.zip</a></li>    
   </ul>
 </body>
 </html>
