--- a/tests/lada/index.html
+++ b/tests/lada/index.html
@@ -30,6 +30,12 @@
 
     <li><a href="atom_3_110_dnd/index.html">atom_3_110_dnd </a></li>
     <li><a href="atom_3_110_dnd.zip">atom_3_110_dnd.zip</a></li>    
+    
+    <li><a href="atom_3_113_dnd/index.html">atom_3_113_dnd </a></li>
+    <li><a href="atom_3_113_dnd.zip">atom_3_113_dnd.zip</a></li>    
+    
+    <li><a href="atom_3_120_dnd/index.html">atom_3_120_dnd </a></li>
+    <li><a href="atom_3_120_dnd.zip">atom_3_120_dnd.zip</a></li>    
   </ul>
 </body>
 </html>
