--- a/tests/lada/index.html
+++ b/tests/lada/index.html
@@ -44,6 +44,11 @@
         
     <li><a href="atom_3_140_knot/index.html">atom_3_140_knot </a></li>
     <li><a href="atom_3_140_knot.zip">atom_3_140_knot.zip</a></li>    
+
+    <li>--------------------------------------- </a></li>
+
+    <li><a href="rusal_player/index.html">rusal_player </a></li>
+    <li><a href="rusal_player.zip">rusal_player.zip</a></li>    
   </ul>
 </body>
 </html>
