--- a/tests/lada/gpn/index.html
+++ b/tests/lada/gpn/index.html
@@ -11,8 +11,8 @@
     <li><a href="bank_player/index.html">bank_player </a></li>
     <li><a href="bank_player.zip">bank_player.zip</a></li>    
 
-    <li><a href="task_1_25_dnd/index.html">task_1_25_dnd </a></li>
-    <li><a href="task_1_25_dnd.zip">task_1_25_dnd.zip</a></li>    
+    <li><a href="task_1_25_dnd_cards/index.html">task_1_25_dnd_cards </a></li>
+    <li><a href="task_1_25_dnd_cards.zip">task_1_25_dnd_cards.zip</a></li>    
   </ul>
 </body>
 </html>
