--- a/tests/lada/atom/index.html
+++ b/tests/lada/atom/index.html
@@ -28,6 +28,11 @@
     <li><a href="atom_3_140_knot/index.html">atom_3_140_knot </a></li>
     <li><a href="atom_3_140_knot.zip">atom_3_140_knot.zip</a></li>    
 
+    <li><a href="atom_1_2039_dnd/index.html">atom_1_2039_dnd </a></li>
+    <li><a href="atom_1_2039_dnd.zip">atom_1_2039_dnd.zip</a></li>    
+
+    
+
   </ul>
 </body>
 </html>
