--- a/tests/kapralova/index.html
+++ b/tests/kapralova/index.html
@@ -11,7 +11,10 @@
     <li><a href="multon_player/index.html">multon_player </a></li>
     <li><a href="multon_player.zip">multon_player.zip</a></li> 
     
+    <li><a href="image_with_scroll/index.html">image_with_scroll </a></li>
+    <li><a href="image_with_scroll.zip">image_with_scroll.zip</a></li> 
 
+    
   </ul>
 </body>
 </html>
