--- a/tests/kapralova/index.html
+++ b/tests/kapralova/index.html
@@ -13,7 +13,8 @@
     
     <li><a href="image_with_scroll/index.html">image_with_scroll </a></li>
     <li><a href="image_with_scroll.zip">image_with_scroll.zip</a></li> 
-
+    <li><a href="multon_task_9_dnd/index.html">multon_task_9_dnd </a></li>
+    <li><a href="multon_task_9_dnd.zip">multon_task_9_dnd.zip</a></li> 
     
   </ul>
 </body>
