--- a/tests/lada/gpn/index.html
+++ b/tests/lada/gpn/index.html
@@ -12,7 +12,10 @@
     <li><a href="bank_player.zip">bank_player.zip</a></li>    
 
     <li><a href="task_1_25_dnd_cards/index.html">task_1_25_dnd_cards </a></li>
-    <li><a href="task_1_25_dnd_cards.zip">task_1_25_dnd_cards.zip</a></li>    
+    <li><a href="task_1_25_dnd_cards.zip">task_1_25_dnd_cards.zip</a></li> 
+    
+        <li><a href="task_1_25_dnd/index.html">task_1_25_dnd </a></li>
+    <li><a href="task_1_25_dnd.zip">task_1_25_dnd.zip</a></li>   
   </ul>
 </body>
 </html>
