--- a/tests/lada/gpn/index.html
+++ b/tests/lada/gpn/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Tests</title>
 </head>
+
 <body>
   <h1>Tests</h1>
-  
+
   <ul>
 
-    <li><a href="bank_player/index.html">bank_player </a></li>
-    <li><a href="bank_player.zip">bank_player.zip</a></li>    
+    <!-- <li><a href="bank_player/index.html">bank_player </a></li>
+    <li><a href="bank_player.zip">bank_player.zip</a></li> -->
 
     <li><a href="task_1_25_dnd_cards/index.html">task_1_25_dnd_cards </a></li>
-    <li><a href="task_1_25_dnd_cards.zip">task_1_25_dnd_cards.zip</a></li> 
-    
-        <li><a href="task_1_25_dnd/index.html">task_1_25_dnd </a></li>
-    <li><a href="task_1_25_dnd.zip">task_1_25_dnd.zip</a></li>   
+    <li><a href="task_1_25_dnd_cards.zip">task_1_25_dnd_cards.zip</a></li>
+
+    <li><a href="task_1_25_dnd/index.html">task_1_25_dnd </a></li>
+    <li><a href="task_1_25_dnd.zip">task_1_25_dnd.zip</a></li>
+
+    <li><a href="task_2_69_knot/index.html">task_2_69_knot </a></li>
+    <li><a href="task_2_69_knot.zip">task_2_69_knot.zip</a></li>
   </ul>
 </body>
+
 </html>
