--- a/tests/lada/index.html
+++ b/tests/lada/index.html
@@ -11,14 +11,14 @@
     <li><a href="gpn/index.html">gpn </a></li>
     <li>--------------------------------------- </a></li>
 
-    <li><a href="task_1_25_dnd/index.html">task_1_25_dnd </a></li>
+    <!-- <li><a href="task_1_25_dnd/index.html">task_1_25_dnd </a></li>
     <li><a href="task_1_25_dnd.zip">task_1_25_dnd.zip</a></li>    
-    
+     -->
     <li><a href="task_2_65_dnd/index.html">task_2_65_dnd </a></li>
     <li><a href="task_2_65_dnd.zip">task_2_65_dnd.zip</a></li>    
     
-    <li><a href="task_2_69_knot/index.html">task_2_69_knot </a></li>
-    <li><a href="task_2_69_knot.zip">task_2_69_knot.zip</a></li>    
+    <!-- <li><a href="task_2_69_knot/index.html">task_2_69_knot </a></li>
+    <li><a href="task_2_69_knot.zip">task_2_69_knot.zip</a></li>     -->
 
     <li><a href="task_3_20_dnd/index.html">task_3_20_dnd </a></li>
     <li><a href="task_3_20_dnd.zip">task_3_20_dnd.zip</a></li>    
