--- a/tests/lada/index.html
+++ b/tests/lada/index.html
@@ -17,8 +17,8 @@
     <li><a href="task_2_65_dnd/index.html">task_2_65_dnd </a></li>
     <li><a href="task_2_65_dnd.zip">task_2_65_dnd.zip</a></li>    
     
-    <!-- <li><a href="task_2_69_knot/index.html">task_2_69_knot </a></li>
-    <li><a href="task_2_69_knot.zip">task_2_69_knot.zip</a></li>     -->
+    <li><a href="task_2_69_knot/index.html">task_2_69_knot </a></li>
+    <li><a href="task_2_69_knot.zip">task_2_69_knot.zip</a></li>    
 
     <li><a href="task_3_20_dnd/index.html">task_3_20_dnd </a></li>
     <li><a href="task_3_20_dnd.zip">task_3_20_dnd.zip</a></li>    
