--- a/tests/lada/gpn/index.html
+++ b/tests/lada/gpn/index.html
@@ -20,7 +20,10 @@
     <li><a href="task_1_25_dnd.zip">task_1_25_dnd.zip</a></li>
 
     <li><a href="task_2_69_knot/index.html">task_2_69_knot </a></li>
-    <li><a href="task_2_69_knot.zip">task_2_69_knot.zip</a></li>
+    <li><a href="task_2_69_knot.zip">task_2_69_knot.zip</a></li>   
+
+    <li><a href="task_3_20_dnd/index.html">task_3_20_dnd </a></li>
+    <li><a href="task_3_20_dnd.zip">task_3_20_dnd.zip</a></li>    
   </ul>
 </body>
 
