--- a/tests/index.html
+++ b/tests/index.html
@@ -13,6 +13,9 @@
         <li><a href="dnd_115/index.html">dnd_115</a></li>
         <li><a href="dnd_115.zip">dnd_115.zip</a></li>
 
+        <li><a href="dnd_86_88/">dnd_86_88</a></li>
+        <li><a href="dnd_86_88.zip">dnd_86_88.zip</a></li>
+
     </ul>
 </body>
 
