--- a/tests/index.html
+++ b/tests/index.html
@@ -16,6 +16,9 @@
         <li><a href="dnd_86_88/">dnd_86_88</a></li>
         <li><a href="dnd_86_88.zip">dnd_86_88.zip</a></li>
 
+        <li><a href="dnd_90_92/">dnd_90_92</a></li>
+        <li><a href="dnd_90_92.zip">dnd_90_92.zip</a></li>
+
     </ul>
 </body>
 
